--- a/SystemAnalysisAndDesign/SystemAnalysisAndDesign/Views/SignInandRegisterView/SignInMainView.xaml
+++ b/SystemAnalysisAndDesign/SystemAnalysisAndDesign/Views/SignInandRegisterView/SignInMainView.xaml
@@ -42,23 +42,29 @@
                 <!-- Click="btnRegisterTab_Click" -->
             </StackPanel>
 
-            <TextBlock Text="Email Address" Margin="0,10,0,5" FontWeight="Medium" />
-            <TextBox x:Name="txtEmail" Height="40" Padding="10,0" VerticalContentAlignment="Center"
-                     BorderBrush="#E2E8F0" BorderThickness="1" />
+            <TextBlock Text="Username" Margin="0,10,0,5" FontWeight="Medium" />
+            <TextBox x:Name="txtUsername" Height="40" Padding="10,0" VerticalContentAlignment="Center"
+                     BorderBrush="#E2E8F0" BorderThickness="1"/>
 
             <TextBlock Text="Password" Margin="0,25,0,5" FontWeight="Medium" />
             <Grid>
-                <PasswordBox x:Name="txtPassword" Height="40" Padding="10,0" VerticalContentAlignment="Center"
+                <PasswordBox x:Name="txtPassword" KeyDown="txtPassword_KeyDown" Height="40" Padding="10,0" VerticalContentAlignment="Center"
                          BorderBrush="#E2E8F0" BorderThickness="1"/>
+                <!-- TextBox hiện -->
+                <TextBox x:Name="txtVisiblePassword" Height="40" Padding="10,0" 
+                     VerticalContentAlignment="Center"
+                     BorderBrush="#E2E8F0" BorderThickness="1"
+                     Visibility="Collapsed"/>
+                
                 <Button x:Name="btnShowPassword" Content="👁" Width="30" Height="30" 
                         HorizontalAlignment="Right" Margin="0,0,5,0" Background="Transparent"
-                        BorderThickness="0" />
-                <!-- Click="btnShowPassword_Click"-->
+                        BorderThickness="0" Click="btnShowPassword_Click"/>
+                <!-- -->
             </Grid>
 
             <Button x:Name="btnLogin" Content="Login" Height="45" Width="100" Background="#3563E9" 
                     Foreground="White" BorderThickness="0" FontWeight="SemiBold" 
-                    Margin="0,30,0,0" />
+                    Margin="0,30,0,0" Click="btnLogin_Click"/>
             <!-- Click="btnLogin_Click" -->
 
             <TextBlock Text="Don't have an account? Register" HorizontalAlignment="Center" 
