--- a/SystemAnalysisAndDesign/SystemAnalysisAndDesign/Views/PaymentView/PaymentMainView.xaml
+++ b/SystemAnalysisAndDesign/SystemAnalysisAndDesign/Views/PaymentView/PaymentMainView.xaml
@@ -3,6 +3,7 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
         xmlns:components="clr-namespace:SystemAnalysisAndDesign.Views.Share"
         xmlns:local="clr-namespace:SystemAnalysisAndDesign.Views.PaymentView"
         xmlns:rentalsum="clr-namespace:SystemAnalysisAndDesign.Views.PaymentView.ComponentPaymentView"
@@ -33,6 +34,10 @@
                             </Grid.RowDefinitions>
 
                             <StackPanel Grid.Row="0" Margin="40,30,40,30" Background="White">
+                                <Button Style="{StaticResource PrimaryButtonStyle}" Width="40" Height="40" Click="BackButton_Click"
+                                        HorizontalAlignment="Left" VerticalAlignment="Center">
+                                    <materialDesign:PackIcon Kind="ArrowLeftBold" Foreground="White" Width="20" Height="20" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+                                </Button>
                                 <!-- Billing Info Section -->
                                 <Grid>
                                     <Grid.ColumnDefinitions>
