--- a/SystemAnalysisAndDesign/SystemAnalysisAndDesign/Views/Share/Header.xaml
+++ b/SystemAnalysisAndDesign/SystemAnalysisAndDesign/Views/Share/Header.xaml
@@ -30,7 +30,7 @@
                     <TextBox Width="400" FontSize="14" VerticalAlignment="Center" 
                          BorderThickness="0" Background="Transparent" 
                          Foreground="Gray" Text="Search something here" TextChanged="TextBox_TextChanged"/>
-                    <materialDesign:PackIcon Kind="Tune" Width="20" Height="20" Margin="0,0,5,0" VerticalAlignment="Center" HorizontalAlignment="right" Foreground="Gray"/>
+                        <materialDesign:PackIcon Kind="Tune" Width="20" Height="20" Margin="0,0,5,0" VerticalAlignment="Center" HorizontalAlignment="right" Foreground="Gray"/>
                 </DockPanel>
             </Border>
 
@@ -51,10 +51,29 @@
                 </Border>
 
                 <!-- Settings -->
-                <Border Width="40" Height="40" Background="White" CornerRadius="20" Margin="5,0,0,0"
-        BorderBrush="#E0E0E0" BorderThickness="1" Padding="6">
-                    <materialDesign:PackIcon Kind="Cog" Width="28" Height="28" Foreground="Gray" VerticalAlignment="Center" HorizontalAlignment="Center"/>
-                </Border>
+                <Grid>
+                    <!-- Setting Icon -->
+                    <Border x:Name="SettingIcon"
+                            Width="40" Height="40" Background="White" CornerRadius="20" Margin="5,0,0,0"
+                            BorderBrush="#E0E0E0" BorderThickness="1" Padding="6"
+                            MouseLeftButtonDown="SettingIcon_MouseLeftButtonDown">
+                        <materialDesign:PackIcon Kind="Cog" Width="28" Height="28" Foreground="Gray" VerticalAlignment="Center" HorizontalAlignment="Center"/>
+                    </Border>
+
+                    <!-- Popup Menu -->
+                    <Popup Name="SettingsPopup"
+                           Placement="Bottom"
+                           PlacementTarget="{Binding ElementName=SettingIcon}"
+                           StaysOpen="False"
+                           AllowsTransparency="True"
+                           PopupAnimation="Slide">
+                        <Border Background="White" CornerRadius="10" BorderBrush="#E0E0E0" BorderThickness="1" Padding="10" >
+                            <StackPanel>
+                                <Button Content="Logout" Margin="0,5" Width="100" Height="30" BorderThickness="0" Background="Transparent" HorizontalAlignment="Left" Click="Logout_Click"/>
+                            </StackPanel>
+                        </Border>
+                    </Popup>
+                </Grid>
 
                 <!-- User Avatar -->
                 <Ellipse Width="40" Height="40" Margin="5,0,0,0">
