--- a/SystemAnalysisAndDesign/SystemAnalysisAndDesign/Views/PaymentView/ComponentPaymentView/RentalSummaryView.xaml
+++ b/SystemAnalysisAndDesign/SystemAnalysisAndDesign/Views/PaymentView/ComponentPaymentView/RentalSummaryView.xaml
@@ -1,6 +1,8 @@
 ﻿<UserControl x:Class="SystemAnalysisAndDesign.Views.PaymentView.ComponentPaymentView.RentalSummaryView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+             d:DataContext="{d:DesignInstance Type=viewModels:RentalSummaryViewModel}"
+             xmlns:viewModels="clr-namespace:SystemAnalysisAndDesign.ViewModels.PaymentViewModel"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              mc:Ignorable="d" 
@@ -22,6 +24,7 @@
                         <TextBlock Text="★★★★☆" Foreground="#FFC107" FontSize="12" Margin="0 0 5 0"/>
                         <TextBlock Text="440+ Reviewer" Foreground="#90A3BF" FontSize="12"/>
                     </StackPanel>
+                    <TextBlock Text="{Binding SelectedCar.PricePerDay, StringFormat={}{0:C}}" Grid.Column="1" FontSize="14" Margin="5 8"/>
                 </StackPanel>
             </StackPanel>
 
@@ -35,7 +38,7 @@
                         <ColumnDefinition Width="Auto"/>
                     </Grid.ColumnDefinitions>
                     <TextBlock Text="Subtotal" Grid.Column="0" Foreground="#90A3BF"/>
-                    <TextBlock Text="{Binding SelectedCar.PricePerDay, StringFormat={}{0:C}}" Grid.Column="1" FontWeight="Bold"/>
+                    <TextBlock Text="{Binding TotalAmount, StringFormat={}{0:C}}" Grid.Column="1" FontWeight="Bold"/>
                 </Grid>
                 <Grid>
                     <Grid.ColumnDefinitions>
@@ -73,7 +76,7 @@
                     <TextBlock Text="Total Rental Price" FontWeight="Bold" FontSize="14"/>
                     <TextBlock Text="Overall price and includes rental discount" Foreground="#90A3BF" FontSize="12"/>
                 </StackPanel>
-                <TextBlock Grid.Column="1" Text="{Binding SelectedCar.PricePerDay, StringFormat={}{0:C}}" FontWeight="Bold" FontSize="20" VerticalAlignment="Bottom"/>
+                <TextBlock Grid.Column="1" Text="{Binding TotalAmount, StringFormat={}{0:C}}" FontWeight="Bold" FontSize="20" VerticalAlignment="Bottom"/>
             </Grid>
         </StackPanel>
     </Border>
