--- a/SystemAnalysisAndDesign/SystemAnalysisAndDesign/Views/SignInandRegisterView/SignInMainView.xaml
+++ b/SystemAnalysisAndDesign/SystemAnalysisAndDesign/Views/SignInandRegisterView/SignInMainView.xaml
@@ -32,12 +32,12 @@
             <TextBlock Text="Welcome!" FontSize="28" FontWeight="Bold" HorizontalAlignment="Center"/>
 
             <StackPanel Orientation="Horizontal" Margin="0,10,0,20" HorizontalAlignment="Center">
-                <Button x:Name="btnLoginTab" Content="Login" Width="100" Height="40" 
-                        Background="#E0E9FF" Foreground="#1A202C" BorderThickness="0" 
+                <Button x:Name="btnLoginTab" Style="{StaticResource PrimaryButtonStyle}" Content="Login" Width="100" Height="40" 
+                        BorderThickness="0" 
                         FontWeight="SemiBold" Margin="0,0,10,0" />
                 <!-- Click="btnLoginTab_Click" -->
-                <Button x:Name="btnRegisterTab" Content="Register" Width="100" Height="40" 
-                        Background="#3563E9" Foreground="White" BorderThickness="0" 
+                <Button x:Name="btnRegisterTab" Content="Register" Style="{StaticResource PrimaryButtonStyle}" Width="100" Height="40" 
+                        Background="#E0E9FF" Foreground="#1A202C" BorderThickness="0" 
                         FontWeight="SemiBold" />
                 <!-- Click="btnRegisterTab_Click" -->
             </StackPanel>
@@ -62,13 +62,13 @@
                 <!-- -->
             </Grid>
 
-            <Button x:Name="btnLogin" Content="Login" Height="45" Width="100" Background="#3563E9" 
+            <Button x:Name="btnLogin" Content="Login" Style="{StaticResource PrimaryButtonStyle}" Height="45" Width="100" Background="#3563E9" 
                     Foreground="White" BorderThickness="0" FontWeight="SemiBold" 
                     Margin="0,30,0,0" Click="btnLogin_Click"/>
             <!-- Click="btnLogin_Click" -->
 
-            <TextBlock Text="Don't have an account? Register" HorizontalAlignment="Center" 
-                       Margin="0,15,0,0" Height="48" Width="363">
+            <TextBlock HorizontalAlignment="Center" 
+                       Margin="0,15,0,0" >
                 <TextBlock.Inlines>
                     <Run Text="Don't have an account?"/>
                     <Run Text=" Register" Foreground="#3563E9" FontWeight="SemiBold" 
