--- a/SystemAnalysisAndDesign/SystemAnalysisAndDesign/Views/AdminCarRentView/AdminCarRentAddMainView.xaml
+++ b/SystemAnalysisAndDesign/SystemAnalysisAndDesign/Views/AdminCarRentView/AdminCarRentAddMainView.xaml
@@ -44,7 +44,7 @@
 
                     <!-- Car Rent -->
                     <Border Background="#3A63F1" CornerRadius="7" Margin="0 5" Height="40">
-                        <Button Background="Transparent" BorderThickness="0">
+                        <Button Click="btn_CarRent" Background="Transparent" BorderThickness="0">
                             <StackPanel Orientation="Horizontal">
                                 <materialDesign:PackIcon Kind="Car" Width="20" Height="20" Margin="5" VerticalAlignment="Center" Foreground="White"/>
                                 <TextBlock Text="Car Rent" Foreground="White" FontWeight="Bold" Margin="0" VerticalAlignment="Center"/>
