--- a/SystemAnalysisAndDesign/SystemAnalysisAndDesign/Views/AdminCarRentView/ComponentAdminCarRentView/AdminAddCarView.xaml
+++ b/SystemAnalysisAndDesign/SystemAnalysisAndDesign/Views/AdminCarRentView/ComponentAdminCarRentView/AdminAddCarView.xaml
@@ -29,13 +29,13 @@
                     <StackPanel Margin="10,5">
                         <TextBlock Text="Brand" Margin="15,0"/>
                         <Border CornerRadius="15" BorderBrush="#E0E0E0" BorderThickness="1" Height="35" Margin="0,5" Padding="10" Width="400">
-                            <TextBox Background="Transparent" BorderThickness="0" VerticalAlignment="Center"/>
+                            <TextBox Text="{Binding Brand, UpdateSourceTrigger=PropertyChanged}" Background="Transparent" BorderThickness="0" VerticalAlignment="Center"/>
                         </Border>
                     </StackPanel>
                     <StackPanel Margin="10,5">
                         <TextBlock Text="Model" Margin="15,0"/>
                         <Border CornerRadius="15" BorderBrush="#E0E0E0" BorderThickness="1" Height="35" Margin="0,5" Padding="10" Width="400">
-                            <TextBox Background="Transparent" BorderThickness="0" VerticalAlignment="Center"/>
+                            <TextBox Text="{Binding Model, UpdateSourceTrigger=PropertyChanged}" Background="Transparent" BorderThickness="0" VerticalAlignment="Center"/>
                         </Border>
                     </StackPanel>
                 </StackPanel>
@@ -43,15 +43,15 @@
                 <!-- CarType + LicensePlate -->
                 <StackPanel Grid.Row="1" Orientation="Horizontal">
                     <StackPanel Margin="10,5">
-                        <TextBlock Text="Type" Margin="15,0"/>
+                        <TextBlock Text="Car type" Margin="15,0"/>
                         <Border CornerRadius="15" BorderBrush="#E0E0E0" BorderThickness="1" Height="35" Margin="0,5" Padding="10" Width="400">
-                            <TextBox Background="Transparent" BorderThickness="0" VerticalAlignment="Center"/>
+                            <TextBox Text="{Binding CarType, UpdateSourceTrigger=PropertyChanged}" Background="Transparent" BorderThickness="0" VerticalAlignment="Center"/>
                         </Border>
                     </StackPanel>
                     <StackPanel Margin="10,5">
-                        <TextBlock Text="License Plate" Margin="15,0"/>
+                        <TextBlock Text="License plate" Margin="15,0"/>
                         <Border CornerRadius="15" BorderBrush="#E0E0E0" BorderThickness="1" Height="35" Margin="0,5" Padding="10" Width="400">
-                            <TextBox Background="Transparent" BorderThickness="0" VerticalAlignment="Center"/>
+                            <TextBox Text="{Binding LicensePlate, UpdateSourceTrigger=PropertyChanged}" Background="Transparent" BorderThickness="0" VerticalAlignment="Center"/>
                         </Border>
                     </StackPanel>
                 </StackPanel>
@@ -61,13 +61,13 @@
                     <StackPanel Margin="10,5">
                         <TextBlock Text="Color" Margin="15,0"/>
                         <Border CornerRadius="15" BorderBrush="#E0E0E0" BorderThickness="1" Height="35" Margin="0,5" Padding="10" Width="400">
-                            <TextBox Background="Transparent" BorderThickness="0" VerticalAlignment="Center"/>
+                            <TextBox Text="{Binding Color, UpdateSourceTrigger=PropertyChanged}" Background="Transparent" BorderThickness="0" VerticalAlignment="Center"/>
                         </Border>
                     </StackPanel>
                     <StackPanel Margin="10,5">
-                        <TextBlock Text="Price Per Day" Margin="15,0"/>
+                        <TextBlock Text="Price per day" Margin="15,0"/>
                         <Border CornerRadius="15" BorderBrush="#E0E0E0" BorderThickness="1" Height="35" Margin="0,5" Padding="10" Width="400">
-                            <TextBox Background="Transparent" BorderThickness="0" VerticalAlignment="Center"/>
+                            <TextBox Text="{Binding PricePerDay, UpdateSourceTrigger=PropertyChanged}" Background="Transparent" BorderThickness="0" VerticalAlignment="Center"/>
                         </Border>
                     </StackPanel>
                 </StackPanel>
@@ -76,8 +76,8 @@
                 <StackPanel Grid.Row="3" Orientation="Horizontal">
                     <StackPanel Margin="10,5">
                         <TextBlock Text="Car Image" Margin="15,0"/>
-                        <Button Name="btnUpload" Content="Upload Image" Foreground="Black" Height="35" Width="200"
-                                Background="#EFF3FD" Margin="0,5" Click="btnUpload_Click">
+                        <Button Content="Upload Image" Foreground="Black" Height="35" Width="200"
+                                Background="#EFF3FD" Margin="0,5" Command="{Binding UploadImageCommand}">
                             <Button.Template>
                                 <ControlTemplate TargetType="Button">
                                     <Border Background="{TemplateBinding Background}" BorderBrush="#E0E0E0" BorderThickness="1" CornerRadius="15">
@@ -101,23 +101,23 @@
                     <StackPanel Margin="10,5">
                         <TextBlock Text="Description" Margin="15,0"/>
                         <Border CornerRadius="15" BorderBrush="#E0E0E0" BorderThickness="1" Height="70" Margin="0,5" Padding="10" Width="400">
-                            <TextBox Background="Transparent" BorderThickness="0"/>
+                            <TextBox Text="{Binding Description, UpdateSourceTrigger=PropertyChanged}" Background="Transparent" BorderThickness="0"/>
                         </Border>
                         <TextBlock Text="Manufacture Year" Margin="15,10,0,0"/>
                         <Border CornerRadius="15" BorderBrush="#E0E0E0" BorderThickness="1" Height="35" Margin="0,5" Padding="10" Width="400">
-                            <TextBox Background="Transparent" BorderThickness="0" VerticalAlignment="Center"/>
+                            <TextBox Text="{Binding ManufactureYear, UpdateSourceTrigger=PropertyChanged}" Background="Transparent" BorderThickness="0" VerticalAlignment="Center"/>
                         </Border>
                         <StackPanel Orientation="Horizontal" HorizontalAlignment="Center" Margin="0,10" >
                             <StackPanel Margin="0,0,10,0">
                                 <TextBlock Text="Mileage" Margin="15,0"/>
                                 <Border CornerRadius="15" BorderBrush="#E0E0E0" BorderThickness="1" Height="35" Margin="0,5" Padding="10" Width="190">
-                                    <TextBox Background="Transparent" BorderThickness="0" VerticalAlignment="Center"/>
+                                    <TextBox Text="{Binding Mileage, UpdateSourceTrigger=PropertyChanged}" Background="Transparent" BorderThickness="0" VerticalAlignment="Center"/>
                                 </Border>
                             </StackPanel>
                             <StackPanel Margin="10,0,0,0">
                                 <TextBlock Text="Capacity" Margin="15,0"/>
                                 <Border CornerRadius="15" BorderBrush="#E0E0E0" BorderThickness="1" Height="35" Margin="0,5" Padding="10" Width="190">
-                                    <TextBox Background="Transparent" BorderThickness="0" VerticalAlignment="Center"/>
+                                    <TextBox Text="{Binding Capacity, UpdateSourceTrigger=PropertyChanged}" Background="Transparent" BorderThickness="0" VerticalAlignment="Center"/>
                                 </Border>
                             </StackPanel>
                         </StackPanel>
@@ -135,7 +135,7 @@
                             </ControlTemplate>
                         </Button.Template>
                     </Button>
-                    <Button Content="Save" Height="35" Width="100" Padding="10" Background="#2C63F1" Foreground="White" Margin="10,0,0,0">
+                    <Button Content="Save" Command="{Binding SaveCommand}" Height="35" Width="100" Padding="10" Background="#2C63F1" Foreground="White" Margin="10,0,0,0">
                         <Button.Template>
                             <ControlTemplate TargetType="Button">
                                 <Border Background="{TemplateBinding Background}" CornerRadius="15">
