--- a/SystemAnalysisAndDesign/SystemAnalysisAndDesign/Views/AdminCarRentApprovalView/AdminCarRentApprovalMainView.xaml
+++ b/SystemAnalysisAndDesign/SystemAnalysisAndDesign/Views/AdminCarRentApprovalView/AdminCarRentApprovalMainView.xaml
@@ -1,62 +1,60 @@
-﻿<Window x:Class="SystemAnalysisAndDesign.Views.AdminCarRentView.AdminCarRentMainView"
+﻿<Window x:Class="SystemAnalysisAndDesign.Views.AdminCarRentApprovalView.AdminCarRentApprovalMainView"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
-        xmlns:local="clr-namespace:SystemAnalysisAndDesign.Views.AdminCarRentView"
-        mc:Ignorable="d"
+        xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:components="clr-namespace:SystemAnalysisAndDesign.Views.Share"
-        xmlns:carlist="clr-namespace:SystemAnalysisAndDesign.Views.AdminCarRentView.ComponentAdminCarRentView"
-        Title="AdminCarRentMainView" Height="auto" Width="1280" Background="#EFF3FD">
+        xmlns:materialDesign="http://materialdesigninxaml.net/winfx/xaml/themes"
+        xmlns:adminComponent="clr-namespace:SystemAnalysisAndDesign.Views.AdminCarRentApprovalView.ComponentAdminCarRentApprovalView"
+        mc:Ignorable="d"
+        Title="AdminCarRentApprovalMainView" Height="760" Width="1280" Background="#EFF3FD">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="0.12*"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
-
+        
         <!--Header-->
         <Grid Grid.Row="0">
             <components:Header/>
         </Grid>
-
-        <!--Main-->
+        
         <Grid Grid.Row="1">
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="0.2*"/>
-                <ColumnDefinition Width="0.8*"/>
+                <ColumnDefinition Width="220"/>
+                <ColumnDefinition Width="*"/>
             </Grid.ColumnDefinitions>
-
+            
             <!-- Sidebar Menu -->
             <StackPanel Background="White" Grid.Column="0" Margin="0,2,0,0">
                 <StackPanel Margin="20">
                     <TextBlock Text="MAIN MENU" FontWeight="Bold" Foreground="Gray" Margin="0 0 0 10"/>
 
                     <!-- Dashboard -->
-                    <Border Background="White" CornerRadius="7" Margin="0 5" Height="40">
-                        <Button Background="Transparent" BorderThickness="0">
+                    <Border Background="white" CornerRadius="7" Margin="0 5" Height="40">
+                        <Button Background="Transparent" BorderThickness="0" >
                             <StackPanel Orientation="Horizontal">
                                 <materialDesign:PackIcon Kind="Home" Width="20" Height="20" Margin="5" VerticalAlignment="Center" Foreground="#3A63F1"/>
                                 <TextBlock Text="Dashboard" Foreground="#3A63F1" FontWeight="Bold" Margin="0" VerticalAlignment="Center"/>
                             </StackPanel>
                         </Button>
                     </Border>
-                    
-                    <Border Background="White" CornerRadius="7" Margin="0 5" Height="40">
-                        <Button Background="Transparent" BorderThickness="0" Click="btn_CarRental">
-                            <StackPanel Orientation="Horizontal">
-                                <materialDesign:PackIcon Kind="Approve" Width="20" Height="20" Margin="5" VerticalAlignment="Center" Foreground="#3A63F1"/>
-                                <TextBlock Text="Rental Request" Foreground="#3A63F1" FontWeight="Bold" Margin="0" VerticalAlignment="Center"/>
-                            </StackPanel>
-                        </Button>
-                    </Border>
 
-                    <!-- Car Rent -->
                     <Border Background="#3A63F1" CornerRadius="7" Margin="0 5" Height="40">
                         <Button Background="Transparent" BorderThickness="0">
                             <StackPanel Orientation="Horizontal">
-                                <materialDesign:PackIcon Kind="Car" Width="20" Height="20" Margin="5" VerticalAlignment="Center" Foreground="White"/>
-                                <TextBlock Text="Car Rent" Foreground="White" FontWeight="Bold" Margin="0" VerticalAlignment="Center"/>
+                                <materialDesign:PackIcon Kind="Approve" Width="20" Height="20" Margin="5" VerticalAlignment="Center" Foreground="white"/>
+                                <TextBlock Text="Rental Request" Foreground="white" FontWeight="Bold" Margin="0" VerticalAlignment="Center"/>
+                            </StackPanel>
+                        </Button>
+                    </Border>
+                    
+                    <!-- Car Rent -->
+                    <Border Background="White" CornerRadius="7" Margin="0 5" Height="40" >
+                        <Button Background="Transparent" BorderThickness="0" Click="btn_CarRentList">
+                            <StackPanel Orientation="Horizontal">
+                                <materialDesign:PackIcon Kind="Car" Width="20" Height="20" Margin="5" VerticalAlignment="Center" Foreground="#3A63F1"/>
+                                <TextBlock Text="Car Rent" Foreground="#3A63F1" FontWeight="Bold" Margin="0" VerticalAlignment="Center"/>
                             </StackPanel>
                         </Button>
                     </Border>
@@ -136,6 +134,7 @@
                 </StackPanel>
             </StackPanel>
 
+
             <Grid Grid.Column="1" Margin="20" Background="WHITE">
                 <Grid.RowDefinitions>
                     <RowDefinition Height="Auto"/>
@@ -150,43 +149,33 @@
                             <!-- Cars Text -->
                             <ColumnDefinition Width="Auto"/>
                             <!-- Search box -->
-                            <ColumnDefinition Width="*"/>
-                            <!-- Add icon, đẩy về phải -->
+                            
                         </Grid.ColumnDefinitions>
 
                         <!-- Title: Cars -->
-                        <TextBlock Grid.Column="0" Text="Cars" FontWeight="Bold" FontSize="18"
-                   VerticalAlignment="Center" HorizontalAlignment="Left" Margin="20,10"/>
+                        <TextBlock Grid.Column="0" Text="Rental Requests" FontWeight="Bold" FontSize="18"
+       VerticalAlignment="Center" HorizontalAlignment="Left" Margin="20,10"/>
 
                         <!-- Search -->
-                        <Border Grid.Column="1" CornerRadius="20" BorderBrush="#E0E0E0"
-                BorderThickness="1" Padding="3" Width="400" Height="35"
-                HorizontalAlignment="Center">
+                        <Border Grid.Column="1" CornerRadius="20" BorderBrush="#E0E0E0" Margin="20,10"
+    BorderThickness="1" Padding="3" Width="400" Height="35"
+    HorizontalAlignment="Right">
                             <DockPanel Margin="5">
                                 <materialDesign:PackIcon Kind="Magnify" Width="18" Height="18" Margin="0,0,5,0" VerticalAlignment="Center" Foreground="Gray"/>
                                 <TextBox Width="400" FontSize="12" VerticalAlignment="Center"
-                                        BorderThickness="0" Background="Transparent"
-                                        Foreground="Gray" Text="Search..."/>        
+                            BorderThickness="0" Background="Transparent"
+                            Foreground="Gray" Text="Search..."/>
                             </DockPanel>
                         </Border>
-
-                        <!-- Add Button -->
-                        <Border Grid.Column="2" Width="35" Height="35" CornerRadius="17.5"
-                                Margin="20,10" Background="#3A63F1" HorizontalAlignment="Right">
-                            <Button Background="Transparent" BorderThickness="0" ToolTip="Add new car"
-                                    Width="24" Height="24" Padding="0" Click="btn_AddCar">
-                                <materialDesign:PackIcon Kind="AddBold" Width="22" Height="22"
-                                                         Foreground="White" FontWeight="Bold"/>
-                            </Button>
-                        </Border>
+                        
                     </Grid>
                 </Border>
-                
+
                 <!-- Data Grid-->
                 <ScrollViewer Grid.Row="1" VerticalScrollBarVisibility="auto">
-                    <carlist:AdminCarListView />
+                    <adminComponent:AdminCarRentApprovalListView Loaded="AdminCarRentApprovalListView_Loaded"/>
                 </ScrollViewer>
-            </Grid>
+            </Grid>            
         </Grid>
     </Grid>
 </Window>
