--- a/SystemAnalysisAndDesign/SystemAnalysisAndDesign/Views/AdminCarRentView/AdminCarRentAddMainView.xaml
+++ b/SystemAnalysisAndDesign/SystemAnalysisAndDesign/Views/AdminCarRentView/AdminCarRentAddMainView.xaml
@@ -42,9 +42,18 @@
                         </Button>
                     </Border>
 
+                    <Border Background="White" CornerRadius="7" Margin="0 5" Height="40">
+                        <Button Background="Transparent" BorderThickness="0" Click="btn_CarRental">
+                            <StackPanel Orientation="Horizontal">
+                                <materialDesign:PackIcon Kind="Approve" Width="20" Height="20" Margin="5" VerticalAlignment="Center" Foreground="#3A63F1"/>
+                                <TextBlock Text="Rental Request" Foreground="#3A63F1" FontWeight="Bold" Margin="0" VerticalAlignment="Center"/>
+                            </StackPanel>
+                        </Button>
+                    </Border>
+
                     <!-- Car Rent -->
                     <Border Background="#3A63F1" CornerRadius="7" Margin="0 5" Height="40">
-                        <Button Background="Transparent" BorderThickness="0">
+                        <Button Click="btn_CarRent" Background="Transparent" BorderThickness="0">
                             <StackPanel Orientation="Horizontal">
                                 <materialDesign:PackIcon Kind="Car" Width="20" Height="20" Margin="5" VerticalAlignment="Center" Foreground="White"/>
                                 <TextBlock Text="Car Rent" Foreground="White" FontWeight="Bold" Margin="0" VerticalAlignment="Center"/>
