--- a/SystemAnalysisAndDesign/SystemAnalysisAndDesign/Views/AdminCarRentView/ComponentAdminCarRentView/AdminCarListView.xaml
+++ b/SystemAnalysisAndDesign/SystemAnalysisAndDesign/Views/AdminCarRentView/ComponentAdminCarRentView/AdminCarListView.xaml
@@ -14,7 +14,7 @@
             <Setter Property="VerticalContentAlignment" Value="Center"/>
         </Style>
     </UserControl.Resources>
-    <Grid>
+    <Grid Background="{Binding Background, RelativeSource={RelativeSource AncestorType=UserControl}}">
         <DataGrid x:Name="CarRentDataGrid" AutoGenerateColumns="False"
           HeadersVisibility="Column" RowHeight="100"
           CanUserAddRows="False" CanUserDeleteRows="False"
@@ -70,7 +70,7 @@
                             <Setter Property="VerticalAlignment" Value="Center"/>
                             <Setter Property="TextAlignment" Value="Center"/>
                         </Style>
-                    </DataGridTextColumn.ElementStyle>                    
+                    </DataGridTextColumn.ElementStyle>
                 </DataGridTextColumn>
 
                 <!-- Year -->
@@ -81,7 +81,7 @@
                             <Setter Property="VerticalAlignment" Value="Center"/>
                             <Setter Property="TextAlignment" Value="Center"/>
                         </Style>
-                    </DataGridTextColumn.ElementStyle>                   
+                    </DataGridTextColumn.ElementStyle>
                 </DataGridTextColumn>
 
                 <!-- Mileage -->
@@ -92,7 +92,7 @@
                             <Setter Property="VerticalAlignment" Value="Center"/>
                             <Setter Property="TextAlignment" Value="Center"/>
                         </Style>
-                    </DataGridTextColumn.ElementStyle>                    
+                    </DataGridTextColumn.ElementStyle>
                 </DataGridTextColumn>
 
                 <!-- Capacity -->
@@ -103,7 +103,7 @@
                             <Setter Property="VerticalAlignment" Value="Center"/>
                             <Setter Property="TextAlignment" Value="Center"/>
                         </Style>
-                    </DataGridTextColumn.ElementStyle>                    
+                    </DataGridTextColumn.ElementStyle>
                 </DataGridTextColumn>
 
 
@@ -139,8 +139,11 @@
                                          ToolTip="Edit" VerticalAlignment="Center"/>
                                 <!-- MouseLeftButtonDown="OnEditClicked" -->
                                 <!-- Delete Icon -->
-                                <materialDesign:PackIcon Kind="Delete" Width="24" Height="24" Foreground="#D32F2F" Cursor="Hand"
-                                         ToolTip="Delete" VerticalAlignment="Center"/>
+                                <Button Command="{Binding DataContext.DeleteCarCommand, RelativeSource={RelativeSource AncestorType=DataGrid}}"
+                                        CommandParameter="{Binding}" BorderBrush="Transparent" BorderThickness="0" Background="Transparent">
+                                    <materialDesign:PackIcon Kind="Delete" Width="24" Height="24" Foreground="#D32F2F" Cursor="Hand"
+                                                                     ToolTip="Delete" VerticalAlignment="Center" />
+                                </Button>
                                 <!-- MouseLeftButtonDown="OnDeleteClicked" -->
                             </StackPanel>
                         </DataTemplate>
